[gd_scene load_steps=6 format=3 uid="uid://uds3rbokhk7s"]

[ext_resource type="FontFile" uid="uid://b0wy3dncaupb" path="res://Art/GamiliaPixel-Regular-BF6652b145dc491.otf" id="1_cf5hy"]
[ext_resource type="Script" uid="uid://c0ol5xweiavqa" path="res://Scripts/PauseUI.gd" id="1_w3mym"]
[ext_resource type="Texture2D" uid="uid://cm52r530p3cf4" path="res://Art/menu_button_default.png" id="2_w3mym"]
[ext_resource type="Texture2D" uid="uid://cgncf43a8qbwi" path="res://Art/menu_button_hover.png" id="3_36amk"]
[ext_resource type="FontFile" uid="uid://rbq7vln3ekon" path="res://Art/Minecraft_font.ttf" id="4_knkv6"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3mym")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 135

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -315
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(879.99, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_cf5hy")
theme_override_font_sizes/normal_font_size = 250
text = "Paused"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVbox" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Button1" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_w3mym")
texture_hover = ExtResource("3_36amk")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button1"]
z_index = 5
custom_minimum_size = Vector2(295, 67)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -33.5
offset_right = 93.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_knkv6")
theme_override_font_sizes/normal_font_size = 75
text = "Resume"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_w3mym")
texture_hover = ExtResource("3_36amk")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button2"]
custom_minimum_size = Vector2(286, 83.39)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -33.5
offset_right = 131.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998629, 1)
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_knkv6")
theme_override_font_sizes/normal_font_size = 75
text = "Settings"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureButton" parent="MarginContainer/VBoxContainer2/ButtonsVbox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_w3mym")
texture_hover = ExtResource("3_36amk")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/ButtonsVbox/Button3"]
custom_minimum_size = Vector2(186, 67)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -33.5
offset_right = 93.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_knkv6")
theme_override_font_sizes/normal_font_size = 75
text = "Quit"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
